# nautobot-plugin-csl

cisco_smart_licensing/: README.md  pyproject.toml
cisco_smart_licensing/cisco_smart_licensing/: __init__.py  jobs.py  template_content.py  urls.py  views.py
cisco_smart_licensing/cisco_smart_licensing/templates/cisco_smart_licensing/: location_tab.html
examples/example_plugin/example_plugin/: template_content.py
