[tool.poetry]
name = "cisco-smart-licensing"
version = "0.1.0"
description = "Utility for managing Cisco Smart Licensing"
authors = ["Travis Johnson"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django-mathfilters = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
